@@ -13,7 +13,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclExecute.c,v 1.101.2.61 2007/09/17 15:10:51 dgp Exp $
+ * RCS: @(#) $Id: tclExecute.c,v 1.101.2.62 2007/10/17 14:39:42 dgp Exp $
  */
 
 #include "tclInt.h"
@@ -5489,7 +5489,8 @@ TclExecuteByteCode(
 		if (l1 >= 3
 		    && (unsigned long) l1 < (sizeof(Exp32Index)
 			     / sizeof(unsigned short)) - 1) {
-		    unsigned short base = Exp32Index[l1-3] + l2 - 9;
+		    unsigned short base = Exp32Index[l1-3]
+			                + (unsigned short) l2 - 9;
 		    if (base < Exp32Index[l1-2]) {
 			/*
 			 * 32-bit number raised to intermediate power,
@@ -5509,7 +5510,8 @@ TclExecuteByteCode(
 		if (-l1 >= 3
 		    && (unsigned long)(-l1) < (sizeof(Exp32Index)
 			     / sizeof(unsigned short)) - 1) {
-		    unsigned short base = Exp32Index[-l1-3] + l2 - 9;
+		    unsigned short base
+			= Exp32Index[-l1-3] + (unsigned short) l2 - 9;
 		    if (base < Exp32Index[-l1-2]) {
 			long lResult = (oddExponent) ? 
 			    -Exp32Value[base] : Exp32Value[base];
@@ -5633,7 +5635,8 @@ TclExecuteByteCode(
 	    if (w1 >= 3
 		&& (Tcl_WideUInt) w1 < (sizeof(Exp64Index)
 			 / sizeof(unsigned short)) - 1) {
-		unsigned short base = Exp64Index[w1-3] + l2 - 17;
+		unsigned short base
+		    = Exp64Index[w1-3] + (unsigned short) l2 - 17;
 		if (base < Exp64Index[w1-2]) {
 		    /*
 		     * 64-bit number raised to intermediate power,
@@ -5653,7 +5656,8 @@ TclExecuteByteCode(
 	    if (-w1 >= 3
 		&& (Tcl_WideUInt) (-w1) < (sizeof(Exp64Index)
 			  / sizeof(unsigned short)) - 1) {
-		unsigned short base = Exp64Index[-w1-3] + l2 - 17;
+		unsigned short base
+		    = Exp64Index[-w1-3] + (unsigned short) l2 - 17;
 		if (base < Exp64Index[-w1-2]) {
 		    Tcl_WideInt wResult = (oddExponent) ? 
 			-Exp64Value[base] : Exp64Value[base];
